kuberenetes deployment/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-rental-backend-service
spec:
  selector:
    app: car-rental-backend
  ports:
    - protocol: TCP
      port: 80 # The external port you want to expose
      targetPort: 8080 # The container port your app listens on
  type: ClusterIP
